Partially fix broken checkin page "corrected" navbar "corrected" footer email link Still looks like shit, but at least it doesn't overlap. I believe this whole issue needs a more in depth analysis rather than these continued quick fixes

--- a/css/global.css
+++ b/css/global.css
@@ -3,6 +3,13 @@ body{
     width: auto !important;
 }
 
+/* added to overwrite bootsrap and temporarily fix the issue where the container isn't filling the page */
+.row {
+  max-resolution: 0px;
+}
+
+
+
 @media(min-device-width: 770px){
     nav.navbar div span{
         font-size: 2rem;
@@ -33,8 +40,8 @@ body{
         height: 35rem;
     }
     #blackstripe #organizer-email{
-        font-size: 3rem;
-        width: 60%;
+        /* font-size: 3rem; */
+        /* width: 60%; */
         margin-left: auto;
         margin-right: auto;
         text-align: center;
@@ -65,7 +72,8 @@ body{
 
 @media(max-device-width: 550px){
     body nav{
-        height: 10rem;
+        /* height: 10rem; */
+        height: 100%;
     }
     body nav #header-links-mobile *{
         font-size: 2rem;
@@ -129,7 +137,8 @@ body{
 
 @media(max-width: 600px) and (max-device-width: 600px){
     body nav{
-        height: 9rem;
+        /* height: 9rem; */
+        height: auto;
     }
 }
 
@@ -164,7 +173,8 @@ nav.navbar div span{
 
 #container{
     width: 100%;
-    min-height: 35rem;
+    /* removed to fix the issue where there is too much whitespace on mobile */
+    /* min-height: 35rem; */
     padding: 0;
     background-color: rgba(255,255,255,0.75);
     height: auto;
@@ -320,12 +330,12 @@ a.footer-link:visited,a.footer-link:active{
         margin-right: 2rem;
     }
     #header-links-mobile .navbar-toggler{
-        height: 100%;
+        height: 40px;
         width: 100%;
         padding: 0;
     }
     #header-links-mobile .navbar-toggler .animated-icon{
-        width: 100%;
+        width: 40px;
         height: 100%;
         padding: 0;
         margin: 0;
